Version 6.3
===========

Major Changes
-------------
* Added support for docking. See below for more information on Docking  
   - Note: CDockable is now recommended over CSplitter for splitter apps.     
* Added the Fast GDI demo. This demonstrates the use of the TintBitmap function.
* MDI child windows now require a view window. The use of a view window is 
   now the same for Frames, MDI children, and dockables.
* Added message translation. This allows modeless dialogs and propertysheets
    to process the tab (and other) keys.
* Added a CWnd::Destroy function. This returns a CWnd back to its default
    state ready to be reused.
* SetView can now be used to change the frame's view from one CWnd to 
    another.
* The Frame now stores which child window had focus before it is de-activated,
    and returns focus to this child when the frame application is reactivated.    
    
    
Fixes
-----    
* CFrame now supports Extra Large fonts in the menu and status bar. Also, font
    size can be changed while the application is running.
* 16Bit colours (and greyscale) are now rendered properly
* Tabbing now works for modeless dialogs and property sheets
   (uses PreTranslateMessage).            


More About Docking
------------------
* Any CWnd object inherrited from CDockable is capable of docking other CWnd
    objects inherrited from CDockable.
* Dockables can be docked in any of the 4 sides. Any number of windows can be 
   docked on a side.
* A dockable could be docked inside another dockable which in turn is docked
   inside another. There is no theoretical limit as to depth of dockables 
   within dockables.
* Dockables have a View window, just like the Frame, and MDI children.
* Dockables are seperated by a movable splitter bar.
* Dockables use a modern style of dock targeting and dock hinting (the same
    as Visual Studio 2005 and 2008).
* Dockables can have styles including:
  - DS_NOTDOCKED			   
  - DS_DOCKED_LEFT	   
  - DS_DOCKED_RIGHT   