@@ -17,6 +17,18 @@ void CViewSimple::OnPaint(HDC hDC)
 	::DrawText(hDC, _T("Simple View"), -1, &r, DT_CENTER|DT_VCENTER|DT_SINGLELINE);
 }
 
+LRESULT CViewSimple::WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
+{
+	switch(uMsg)
+	{
+	case WM_SIZE:
+		Invalidate();
+		break;
+	}
+
+	return WndProcDefault(hWnd, uMsg, wParam, lParam);
+}
+
 
 ///////////////////////////////////////////////
 // CViewList functions
