@@ -21,6 +21,7 @@ public:
 
 protected:
 	virtual void OnPaint(HDC hDC);
+	virtual LRESULT WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam);
 };
 
 
