@@ -191,10 +191,12 @@
         <FILE FILENAME="MDIDemoApp.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIDemoApp" FORMNAME="" DESIGNCLASS=""/>
         <FILE FILENAME="resource.h" CONTAINERID="" LOCALCOMMAND="" UNITNAME="" FORMNAME="" DESIGNCLASS=""/>
         <FILE FILENAME="Resource.rc" CONTAINERID="RCCompiler" LOCALCOMMAND="" UNITNAME="Resource.rc" FORMNAME="Resource.res" DESIGNCLASS=""/>
-        <FILE FILENAME="MaxMDIChild.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MaxMDIChild" FORMNAME="" DESIGNCLASS=""/>
-        <FILE FILENAME="RectMDIChild.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="RectMDIChild" FORMNAME="" DESIGNCLASS=""/>
-        <FILE FILENAME="SimpleMDIChild.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="SimpleMDIChild" FORMNAME="" DESIGNCLASS=""/>
-        <FILE FILENAME="TextMDIChild.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="TextMDIChild" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildListView.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildListView" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildMax.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildMax" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildRect.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildRect" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildSimple.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildSimple" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildText.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildText" FORMNAME="" DESIGNCLASS=""/>
+        <FILE FILENAME="MDIChildTreeView.cpp" CONTAINERID="CCompiler" LOCALCOMMAND="" UNITNAME="MDIChildTreeView" FORMNAME="" DESIGNCLASS=""/>
       </FILELIST>
       <IDEOPTIONS>
         <VersionInfo>
