@@ -100,23 +100,31 @@ SOURCE=.\MainMDIfrm.cpp
 # End Source File
 # Begin Source File
 
-SOURCE=.\MaxMDIChild.cpp
+SOURCE=.\MDIChildListView.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildMax.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildRect.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildSimple.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildText.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildTreeView.cpp
 # End Source File
 # Begin Source File
 
 SOURCE=.\MDIDemoApp.cpp
-# End Source File
-# Begin Source File
-
-SOURCE=.\RectMDIChild.cpp
-# End Source File
-# Begin Source File
-
-SOURCE=.\SimpleMDIChild.cpp
-# End Source File
-# Begin Source File
-
-SOURCE=.\TextMDIChild.cpp
 # End Source File
 # End Group
 # Begin Group "Header Files"
@@ -128,7 +136,27 @@ SOURCE=.\MainMDIfrm.h
 # End Source File
 # Begin Source File
 
-SOURCE=.\MaxMDIChild.h
+SOURCE=.\MDIChildListView.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildMax.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildRect.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildSimple.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildText.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\MDIChildTreeView.h
 # End Source File
 # Begin Source File
 
@@ -137,14 +165,6 @@ SOURCE=.\MDIDemoApp.h
 # Begin Source File
 
 SOURCE=.\resource.h
-# End Source File
-# Begin Source File
-
-SOURCE=.\SimpleMDIChild.h
-# End Source File
-# Begin Source File
-
-SOURCE=.\TextMDIChild.h
 # End Source File
 # End Group
 # Begin Group "Resource Files"
