@@ -252,7 +252,27 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\MaxMDIChild.cpp"
+				RelativePath=".\MDIChildListView.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildMax.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildRect.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildSimple.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildText.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildTreeView.cpp"
 				>
 			</File>
 			<File
@@ -275,18 +295,6 @@
 					/>
 				</FileConfiguration>
 			</File>
-			<File
-				RelativePath=".\RectMDIChild.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\SimpleMDIChild.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TextMDIChild.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -297,11 +305,27 @@
 				>
 			</File>
 			<File
-				RelativePath=".\MaxMDIChild.h"
+				RelativePath=".\MDIChildListView.h"
 				>
 			</File>
 			<File
-				RelativePath="MDIDemoApp.h"
+				RelativePath=".\MDIChildMax.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildRect.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildSimple.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildText.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MDIChildTreeView.h"
 				>
 			</File>
 			<File
@@ -310,14 +334,6 @@
 			</File>
 			<File
 				RelativePath="resource.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SimpleMDIChild.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TextMDIChild.h"
 				>
 			</File>
 		</Filter>
