@@ -1,7 +1,8 @@
 
-#include "SplitterPanes.h"
+
 #include "SplitterApp.h"
 #include "Mainfrm.h"
+#include "SplitterPanes.h"
 
 CPaneTopLeft::CPaneTopLeft() 
 {
